fix for mobile secondary header text spacing

--- a/app/assets/stylesheets/custom-select.scss
+++ b/app/assets/stylesheets/custom-select.scss
@@ -47,7 +47,7 @@
 .select i.sort {
     position: absolute;
     top: 8px;
-    right: 9px;
+    right: -2px;
     width: 5px;
     height: 11px;
     background: #fff;
